gitops/app-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: echo-service
    namespace: demo
spec:
    selector:
      run: echo
    ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
