gitops/app-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: echo-ingress
    namespace: default
    annotations:
        haproxy.org/path-rewrite: "/"
spec:
    rules:
    - http:
        paths:
        - path: /echo
          pathType: Prefix
          backend:
            service:
              name: echo-service
              port:
                number: 8080
